--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -7,7 +7,7 @@
     <button class="btn favorite-element comment-element" id="add-favorite-button" ng-click="ctrl.handleAddToFavorites()">
       <span>make favorite</span>
     </button>
-    <button type="button" class="btn" data-toggle="modal" data-target="#detailsModal" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title, ctrl.movie.details.imdbID, ctrl.movie.details)">
+    <button type="button" class="btn favorite-element comment-element" style="vertical-align: 4px;" data-toggle="modal" data-target="#detailsModal" ng-click="ctrl.handleTitleClick(ctrl.movie.details.Title, ctrl.movie.details.imdbID, ctrl.movie.details)">
       details
     </button>
 
