--- a/public/client/templates/reviewEntry.html
+++ b/public/client/templates/reviewEntry.html
@@ -7,9 +7,9 @@
       </small>
     </div>
   </div>
-  <div style="margin: 0px; position: relative; width: 50px; overflow: hidden; float: left;">
+  <div style="margin: 0px; position: relative; width: 40px; overflow: hidden; float: left;">
     <button ng-click='ctrl.upVote();' class='btn' ng-class="{voted: ctrl.toggleUpVote}"><span class="glyphicon glyphicon-thumbs-up"></span></button>
-    <div style="margin-left: 8px; font-size: 20px">{{ctrl.review.score}}</div>
+    <div style="font-size: 20px; margin: 0px;"><p class="text-center" style="margin: 0;">{{ctrl.review.score}}</p></div>
     <button ng-click='ctrl.downVote()' class="btn" ng-class="{voted: ctrl.toggleDownVote}"><span class="glyphicon glyphicon-thumbs-down"></span></button>
   </div>
   <div style="margin-left: 70px; overflow: hidden; position: relative; width: 70%;">{{ctrl.text}}<br /><a ng-click='ctrl.toggleTextLength()'>{{ctrl.showMoreLessText}}</a></div>
