changes font size on user in review entry

--- a/public/client/templates/reviewEntry.html
+++ b/public/client/templates/reviewEntry.html
@@ -3,7 +3,7 @@
     <div style="color: #ccc;"><strong style="color: #f9ac04;">{{ctrl.review.rating}}/10</strong>
       <small style="color: #ccc;">
         submitted {{ctrl.timeStatement}} by
-        <strong>{{ctrl.review.user}}</strong>
+        <strong style="font-size: 115%;">{{ctrl.review.user}}</strong>
       </small>
     </div>
   </div>
